--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<body>
 		<div id="falling-hearts"></div>
 		<div class="main">
-			<h1>Happy Valentine's Day!</br>
-				<span class="one">Will you</span></br>
-				<span class="two">Bee my</span></br>
-				<span class="three">valentine?</span>
+			<h1>С Днем святого Валентина!</br>
+				<span class="one">Ты будешь</span></br>
+				<span class="two">моей</span></br>
+				<span class="three">валентинкой?</span>
 			</h1>
 			<div class="wrapper">
 				<div class="bee">
@@ -28,9 +28,9 @@
 				<div class="shadow"></div>
 			</div>
 			<h2>
-				To <span id="valentine">Jensen Mikelle</span>:
+				Для <span id="valentine">Ани Шайденок</span>:
 				<br />
-				<span id="message">You are my queen bee</span>
+				<span id="message">Ты моя пчелка</span>
 			</h2>
 		</div>
 		<script src="./script.js" type="text/javascript"></script>
